// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should render logged-out type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <div
      class="mx-auto"
      style="font-size: 72px;"
    >
      <span
        class="ids-icon-success "
      />
    </div>
    <div>
      <h1
        class="ids-heading-xxl !normal-case text-center"
      >
        Du är utloggad
      </h1>
      <p
        class="ids-preamble"
      >
        Du har antingen valt att logga ut eller blivit utloggad på grund av inaktivitet. Du kan nu stänga fliken eller logga in på nytt.
      </p>
      <div
        class="mb-5 text-left md:text-center"
      >
        <div
          class="mb-5 mt-8 w-[43px] border-b md:hidden"
        />
        <div
          class="mx-auto inline-flex flex-col gap-2.5 md:flex-row"
        >
          <a
            class="ids-link"
            href="/"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="ids-icon-arrow-right-small  ids-icon--text-start"
            />
            Till inloggning
            <span
              class="ids-icon-external-link-small  ids-icon--text-end"
            />
          </a>
          <a
            class="ids-link"
            href="https://www.1177.se"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="ids-icon-arrow-right-small  ids-icon--text-start"
            />
            Till 1177
            <span
              class="ids-icon-external-link-small  ids-icon--text-end"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render login-failed type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <div
      class="mx-auto"
      style="font-size: 72px;"
    >
      <span
        class="ids-icon-attention "
      />
    </div>
    <div>
      <h1
        class="ids-heading-xxl !normal-case text-center"
      >
        Inloggning misslyckades
      </h1>
      <p
        class="ids-preamble"
      >
        På grund av ett tekniskt fel går det inte att logga in just nu. Försök igen senare.
      </p>
      <div
        class="mb-5 text-left md:text-center"
      >
        <div
          class="mb-5 mt-8 w-[43px] border-b md:hidden"
        />
        <div
          class="mx-auto inline-flex flex-col gap-2.5 md:flex-row"
        >
          <a
            class="ids-link"
            href="https://e-tjanster.1177.se/mvk/"
          >
            <span
              class="ids-icon-arrow-right-small  ids-icon--text-start"
            />
            Till startsidan
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render not-found type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <div
      class="mx-auto"
      style="font-size: 72px;"
    >
      <span
        class="ids-icon-attention "
      />
    </div>
    <div>
      <h1
        class="ids-heading-xxl !normal-case text-center"
      >
        Sidan hittades inte
      </h1>
      <p
        class="ids-preamble"
      >
        Sidan du söker har fått en ny adress eller är borttagen.
      </p>
      <div
        class="mb-5 text-left md:text-center"
      >
        <div
          class="mb-5 mt-8 w-[43px] border-b md:hidden"
        />
        <div
          class="mx-auto inline-flex flex-col gap-2.5 md:flex-row"
        >
          <a
            class="ids-link"
            href="https://e-tjanster.1177.se/mvk/"
          >
            <span
              class="ids-icon-arrow-right-small  ids-icon--text-start"
            />
            Till startsidan
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render unavailable type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <div
      class="mx-auto"
      style="font-size: 72px;"
    >
      <span
        class="ids-icon-attention "
      />
    </div>
    <div>
      <h1
        class="ids-heading-xxl !normal-case text-center"
      >
        Tjänsten är inte tillgänglig just nu
      </h1>
      <p
        class="ids-preamble"
      >
        Välkommen tillbaka vid senare tillfälle.
      </p>
    </div>
  </div>
</div>
`;

exports[`Should render underage type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <div
      class="mx-auto"
      style="font-size: 72px;"
    >
      <span
        class="ids-icon-attention "
      />
    </div>
    <div>
      <h1
        class="ids-heading-xxl !normal-case text-center"
      >
        Du som är under 16 har inte tillgång till 1177 intyg
      </h1>
      <p
        class="ids-preamble"
      >
        Vänd dig till din mottagning om du har frågor eller behöver en kopia av ditt intyg.
      </p>
      <div
        class="mb-5 text-left md:text-center"
      >
        <div
          class="mb-5 mt-8 w-[43px] border-b md:hidden"
        />
        <div
          class="mx-auto inline-flex flex-col gap-2.5 md:flex-row"
        >
          <a
            class="ids-link"
            href="https://e-tjanster.1177.se/mvk/"
          >
            <span
              class="ids-icon-arrow-right-small  ids-icon--text-start"
            />
            Till startsidan
          </a>
          <a
            class="ids-link"
            href="https://www.1177.se/om-1177/nar-du-loggar-in-pa-1177.se/det-har-kan-du-gora-nar-du-loggat-in/hantera-intyg/hantera-dina-lakarintyg-och-lakarutlatanden/"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="ids-icon-arrow-right-small  ids-icon--text-start"
            />
            Om 1177 intyg
            <span
              class="ids-icon-external-link-small  ids-icon--text-end"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render unknown type error 1`] = `
<div>
  <div
    class="ids-content mx-auto flex max-w-[620px] flex-col gap-10 pt-12 text-center md:pt-24"
  >
    <div
      class="mx-auto"
      style="font-size: 72px;"
    >
      <span
        class="ids-icon-attention "
      />
    </div>
    <div>
      <h1
        class="ids-heading-xxl !normal-case text-center"
      >
        Någonting gick fel
      </h1>
      <p
        class="ids-preamble"
      >
        På grund av ett tekniskt fel går det inte att visa Intyg just nu. Försök igen senare.
      </p>
      <div
        class="mb-5 text-left md:text-center"
      >
        <div
          class="mb-5 mt-8 w-[43px] border-b md:hidden"
        />
        <div
          class="mx-auto inline-flex flex-col gap-2.5 md:flex-row"
        >
          <a
            class="ids-link"
            href="https://e-tjanster.1177.se/mvk/"
          >
            <span
              class="ids-icon-arrow-right-small  ids-icon--text-start"
            />
            Till startsidan
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
